# medcare-idosos

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  medicamentos.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
medcare/: __init__.py  cli.py  models.py  repositorio.py  validacoes.py  viacep.py
tests/: test_medcare.py
